--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     
 </head>
 <body>
+    <header>
     <div class="input-bienvenida">
         <input type="text" class="inputTexto"  placeholder="Seleccione su nombre" aria-label="Recipient's username" id="nombre">
         <button class="btn btn-bienvenida" type="button" id="button-bienvenida">Comenzar</button>
       </div>
-        <h3 class="fonts" id="bienvenida"></h3>
+        <h1 class="fonts" id="bienvenida"></h1>
+    </header>
         
     <div class="list roundBorder">
         <div class="date">
@@ -37,7 +39,9 @@
         </form>
         <div id="tasksContainer"></div>
     </div>
+    <footer>
     <script src="index.js" type="text/javascript" defer></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</footer>
 </body>
 </html>
